# netherearth-ng

./: .gitmodules  3dobject-ase.cpp  3dobject.cpp  3dobject.h  CMakeLists.txt  Makefile.am  Makefile.func  Makefile.in  README.md  ai.cpp  ai.h  ai_operator.h  aioperator.cpp  bitmap.cpp  bitmap.h  building.cpp  building.h  buildingblock.cpp  buildingblock.h  buildingfactory.cpp  buildingfactory.h  buildingsimple.cpp  buildingsimple.h  buildingwarbase.cpp  buildingwarbase.h  bullet.cpp  bullet.h  bulletcannon.cpp  bulletcannon.h  bulletmissile.cpp  bulletmissile.h  bulletphaser.cpp  bulletphaser.h  camera.cpp  camera.h  cmc.cpp  cmc.h  color.h  config.cpp  config.h  (+66 more)
maps/: bigcitylights.map  castle.map  city.map  crossroads.map  ecuador.map  la.map  labirynth.map  map1.map  nucl_war2.map  nuclear.map  original.map  rectangle.map  rectangle2.map  small1.map  small2.map  square_small.map  vulturia.map
subprojects/: sexp_cpp.wrap
