INCLUDES = -I/usr/local/include
bin_PROGRAMS = netherearth
netherearth_SOURCES = 3dobject-ase.cpp 3dobject.cpp aioperator.cpp bitmap.cpp building.cpp bullet.cpp cmc.cpp construction.cpp enemy_ai.cpp explosion.cpp glprintf.cpp main.cpp mainmenu.cpp map.cpp menu.cpp myglutaux.cpp nether.cpp nethercycle.cpp particles.cpp piece3dobject.cpp quaternion.cpp radar.cpp resources.cpp robot.cpp robot_ai.cpp shadow3dobject.cpp ship.cpp stats.cpp vector.cpp
netherearth_LDFLAGS = -L/usr/local/lib
netherearth_LDADD =  -lGL -lGLU -lglut -lSDL -lSDL_mixer -lpthread
EXTRA_DIST = 3dobject-ase.cpp 3dobject.cpp aioperator.cpp bitmap.cpp building.cpp bullet.cpp cmc.cpp construction.cpp enemy_ai.cpp glprintf.cpp main.cpp mainmenu.cpp map.cpp menu.cpp myglutaux.cpp nether.cpp nethercycle.cpp particles.cpp piece3dobject.cpp quaternion.cpp radar.h robot.h robot_ai.cpp shadow3dobject.cpp vector.cpp 3dobject.h bitmap.h cmc.h glprintf.h list.h myglutaux.h nether.h piece3dobject.h quaternion.h resources.h shadow3dobject.h ship.h stats.h vector.h netherearth.motor netherearth.spec
AUTOMAKE_OPTIONS = foreign
